k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-satc
  namespace: ##K8S_NAMESPACE##
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  ingressClassName: nginx
  rules:
  - host: ##DOCKER_USERNAME##.app.devops-satc.online
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-satc
            port:
              number: 80
